Update register page
c

--- a/register.css
+++ b/register.css
@@ -28,7 +28,7 @@ hr {
 
 /* Set a style for the submit/register button */
 .registerbtn {
-  background-color: #FFA500;
+  background-color: #ffa500;
   color: white;
   padding: 16px 20px;
   margin: 8px 0;
