--- a/css/main.css
+++ b/css/main.css
@@ -1281,6 +1281,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
     color: #222222; }
 
+.chris {
+  background-size: cover;
+  padding-top: 100px;
+}    
 .organic-breadcrumb {
   /*background: url(../img/banner/common-banner.jpg) center no-repeat;*/
   background-size: cover;
