--- a/css/freshStyles.css
+++ b/css/freshStyles.css
@@ -141,7 +141,7 @@ body.view-bottom-shelf .roll-camera .move-camera {
   width: 200%;
   height: 2000px;
   margin-left:-50%;
-  background-image: linear-gradient(-40deg, #2c2a2a 10%, #2d2d2d 25%);
+  background-image: linear-gradient(-40deg, #2d2d2d 10%, #2d2d2d 25%);
 }
 .wallpaper:before {
   content:"";
